# TASK5

./: CMakeLists.txt  Figure.h  FigureFactory.h  box.cpp  box.h  figures.txt  functions.cpp  functions.h  functions1.h  main.cpp  ptr.cpp  ptr.h  settings.cpp  settings.h  settings.txt  sphere.cpp  sphere.h  tetra.cpp  tetra.h
